tests/ui/windows-subsystem/windows-subsystem-invalid.rs
#![windows_subsystem = "wrong"]

fn main() {}

<<<<<<< HEAD
// ferrocene-annotations: fls_1l4mnlfk5rr2
// Attribute windows_subsystem
=======
//~? ERROR invalid windows subsystem `wrong`
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
